--- a/src/setup/requirements.txt
+++ b/src/setup/requirements.txt
@@ -1,17 +1,51 @@
+angelcommunity==2.0.0
+bimlpa==0.1.2
+cdlib==0.3.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
+contourpy==1.1.0
+cycler==0.11.0
+decorator==5.1.1
+demon==2.0.6
+dynetx==0.3.2
+einsumt==0.9.4
+eva-lcd==0.1.1
+fonttools==4.42.1
+future==0.18.3
 idna==3.4
+igraph==0.10.6
 intermine==1.13.0
 joblib==1.3.1
+kiwisolver==1.4.5
+Levenshtein==0.21.1
+louvain==0.8.1
+markov-clustering==0.0.6.dev0
+matplotlib==3.7.2
+networkx==3.1
+nf1==0.0.4
 numpy==1.25.2
+packaging==23.1
 pandas==2.0.3
+Pillow==10.0.0
+platformdirs==3.10.0
+pooch==1.7.0
+PuLP==2.7.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
+python-igraph==0.10.6
+python-Levenshtein==0.21.1
+python-louvain==0.16
 pytz==2023.3
+rapidfuzz==3.2.0
 requests==2.31.0
 scikit-learn==1.3.0
 scipy==1.11.1
+seaborn==0.12.2
 six==1.16.0
 sklearn==0.0.post7
+texttable==1.6.7
 threadpoolctl==3.2.0
+thresholdclustering==1.1
+tqdm==4.66.1
 tzdata==2023.3
 urllib3==2.0.4
